compiler/tools/fpp-check/test/port_instance/undef_command_reg.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/port_instance/undef_command_reg.fpp:3.3
  command reg port cmdRegOut
  ^
error: cannot find port `Fw` in this scope
